<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.vpu.mp</groupId>
	<artifactId>mp</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>mp</name>
	<description>java mini program</description>

	<packaging>pom</packaging>

	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
		<java.version>1.8</java.version>
		<elasticsearch.version>7.3.2</elasticsearch.version>
	</properties>


	<modules>
		<module>mp-db-tables</module>
		<module>mp-config</module>
		<module>mp-background</module>
		<module>mp-service</module>
		<module>mp-web</module>
	</modules>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.4.RELEASE</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.vpu.mp</groupId>
				<artifactId>mp-config</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.vpu.mp</groupId>
				<artifactId>mp-db-tables</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.vpu.mp</groupId>
				<artifactId>mp-background</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.vpu.mp</groupId>
				<artifactId>mp-service</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.vpu.mp</groupId>
				<artifactId>mp-web</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.vpu.mp</groupId>
				<artifactId>mp-command</artifactId>
				<version>${project.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
		</dependency>

	</dependencies>
</project>
